# fursearch

./: .gitattributes  .gitignore  README.md  aitool.py  checkpoint_db.sh  fursearch-tgbot.service  pyproject.toml  save_logs.sh  tgbot.py
benchmark/: app.py  config.yaml  run.py
sam3_fursearch/: __init__.py  config.py
sam3_fursearch/api/: __init__.py  annotator.py  cli.py  identifier.py  ingestor.py
sam3_fursearch/models/: __init__.py  classifier.py  embedder.py  preprocessor.py  segmentor.py  shared.py
sam3_fursearch/pipeline/: __init__.py  processor.py
sam3_fursearch/storage/: __init__.py  database.py  mask_storage.py  tracking.py  vector_index.py
sam3_fursearch/tools/: backfill_conffiles.py  download_nfc26.py  hotfix_create_noseg_markers.py
static/: app.js  index.html  manifest.json  sw.js
tests/: test_identifier.py
tools/: compare_embedders.py  relabel_dataset.py
